--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/jasmine": "2.8.6",
     "bower": "^1.7.7",
     "http-server": "^0.9.0",
-    "jasmine-core": "^2.4.1",
+    "jasmine-core": "^2.99.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.8",
-    "protractor": "^4.0.9"
+    "karma-requirejs": "^1.1.0",
+    "karma-webpack": "^3.0.0",
+    "protractor": "^4.0.9",
+    "webpack-cli": "^2.0.14"
   },
   "scripts": {
     "test": "karma start karma.conf.js",
